# symbol_auto_signer

./: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
